# electron-x-pulse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/assets/levels/: Forces.json  Forces.meta.json  Level_1.json  Level_1.meta.json  Level_2.json  Level_2.meta.json  Tutorial.json  Tutorial.meta.json
code/assets/shaders/: blendShader.frag  fragmentShader.frag  gradient.frag  gradient.vert  vertexShader.vert
code/engine/: CMakeLists.txt
code/engine/include/engine/: Assets.h  AudioAnalysis.h  Constants.h  Context.h  Events.h  Game.h  VisualEffects.h
code/engine/include/engine/audio/: AudioAnalysis.h  AudioSystem.h
code/engine/include/engine/ecs/: Component.h  ECS.h  EntityFactory.h  EventDispatcher.h  EventManager.h  GameEvents.h  PlayerEvents.h  System.h
code/engine/include/engine/levelEditor/: EditorSystem.h  EditorUISystem.h
code/engine/include/engine/levelLoading/: CustomSerialization.h  LevelCreationUI.h  LevelLoader.h  LevelManager.h  LevelSelectUISystem.h  LevelUISystem.h  Objects.h
code/engine/include/engine/physics/: PhysicsSystem.h  PlayerContactListener.h
code/engine/include/engine/rendering/: MVPMatrixHelper.h  Mesh.cpp  Mesh.h  RenderingSystem.h  Shader.cpp  Shader.h  Texture.h  TextureManager.h
code/engine/include/engine/stateManagement/: GameState.h  StateManagementSystem.h  StateManagerSystem.h
code/engine/include/engine/userInterface/: FontManager.h  IUISubSystem.h  InGameMenuSystem.h  TopLvlUISystem.h  TutorialUI.h  UIConstants.h  UIEvents.h  UISystem.h
code/engine/src/: AudioAnalysis.cpp  Context.cpp  Game.cpp
code/engine/src/LevelLoading/: LevelCreationUI.cpp  LevelLoader.cpp  LevelManager.cpp  LevelSelectUISystem.cpp  LevelUISystem.cpp
code/engine/src/audio/: AudioAnalysis.cpp  AudioSystem.cpp
code/engine/src/ecs/: EventDispatcher.cpp  EventManager.cpp
code/engine/src/levelEditor/: EditorSystem.cpp  EditorUISystem.cpp
code/engine/src/rendering/: Mesh.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp
code/engine/src/userInterface/: FontManager.cpp  InGameMenuSystem.cpp  TutorialUI.cpp
code/game/: CMakeLists.txt
code/game/src/: Assets.h  Constants.h  Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h  GameUISystem.cpp  GameUISystem.h  InGameMenuSystem.cpp  InGameMenuSystem.h  InstructionUI.cpp  InstructionUI.h  LevelEditorSystem.cpp  LevelEditorSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  main.cpp
code/game/src/State/: LevelPlayState.cpp  LevelPlayState.h  LevelSelectState.h
code/game/src/entities/: Entity.h  Obstacle.cpp  Obstacle.h  Platform.cpp  Player.cpp  Player.h
code/game/src/physics/: ContactListener.h  PhysicsSystem.h  PlayerContactListener.h
code/game/src/rendering/: Mesh.cpp  Mesh.h
code/game/src/states/: EditorState.cpp  EditorState.h  LevelPlayState.cpp  LevelPlayState.h  LevelSelectState.h
code/game/src/ui/: FinishUI.cpp  FinishUI.h  InGameMenuSystem.cpp  InGameMenuSystem.h  InGameMenuUI.cpp  InGameMenuUI.h  InstructionUI.cpp  InstructionUI.h  UIEvents.h
code/levelEditor/: CMakeLists.txt
code/levelEditor/src/: LevelEditor.cpp  LevelEditor.h  main.cpp
docs/: Doxyfile  DoxyfileEngine  DoxyfileGame  DoxyfileManual  QuickStart.md  QuickStartGame.md  QuickStartManual.md
docs/wiki/: engine.md  game.md
documentation/: gl3-patriciapongratz.pptx
engine/: CMakeLists.txt
game/: CMakeLists.txt
game/src/: Assets.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
game/src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Missile.cpp  Missile.h  Obstacle.cpp  Obstacle.h  Planet.cpp  Planet.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Ship.cpp  Ship.h
game/src/musicanalysis/: BeatDetection.cpp  BeatDetection.h
game/src/physics/: ContactListener.cpp  ContactListener.h
game/src/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
